--- a/app.json
+++ b/app.json
@@ -44,6 +44,13 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "2abf0ce8-e4cd-4f3e-ad8f-cdaeeda4eb25"
+      }
+    },
+    "owner": "yogesh_purohit_17"
   }
 }
