--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,33 +1,56 @@
-name: Expo Preview
+name: Expo PR Preview
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
 
 jobs:
-  preview:
+  update:
+    name: EAS Update
     runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
+
     steps:
-      - name: 🏗 Setup repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🏗 Setup Node
+      - name: Debug - Check if token exists
+        run: |
+          if [ -n "${{ secrets.EXPO_TOKEN }}" ]; then
+            echo "✅ EXPO_TOKEN secret is available."
+          else
+            echo "❌ EXPO_TOKEN secret is NOT available."
+            exit 1
+          fi
+
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: npm
+          node-version: '20.x'
+          cache: 'npm'
 
-      - name: 🏗 Setup EAS CLI
-        uses: expo/expo-github-action@v10
+      - name: Restore Metro Cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.expo
+            ~/.cache/metro
+            node_modules/.cache
+          key: ${{ runner.os }}-expo-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-expo-
+
+      - name: Setup EAS
+        uses: expo/expo-github-action@v8
         with:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 📦 Install dependencies
-        run: npm ci
+      - name: Install dependencies
+        run: npm install
 
-      - name: 🚀 Create Preview Update
-        run: npx eas update --auto --branch="${{ github.head_ref }}" --message="${{ github.event.head_commit.message }}" --non-interactive
+      - name: Create preview
+        uses: expo/expo-github-action/preview@v8
+        with:
+          command: eas update --auto
