--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,7 +1,12 @@
-name: Expo PR Preview
+name: Expo Preview
 
 on:
+  push:
+    branches:
+      - main
+      - dev
   pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
   update:
@@ -21,6 +26,7 @@ jobs:
             echo "✅ EXPO_TOKEN secret is available."
           else
             echo "❌ EXPO_TOKEN secret is NOT available."
+            echo "Please add EXPO_TOKEN to your GitHub repository secrets."
             exit 1
           fi
 
@@ -50,7 +56,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Create preview
+      # On Pull Requests: Create a preview and comment on the PR
+      - name: Create preview (PR)
+        if: github.event_name == 'pull_request'
         uses: expo/expo-github-action/preview@v8
         with:
           command: eas update --auto
+
+      # On Push to Branch: Publish the update directly
+      - name: Publish update (Branch)
+        if: github.event_name == 'push'
+        run: eas update --auto
