--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@storybook/addon-ondevice-actions": "^10.1.11",
+    "@storybook/addon-ondevice-controls": "^10.1.11",
+    "@storybook/react-native": "^10.1.11",
     "expo": "~54.0.31",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.13",
@@ -45,10 +50,19 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.6",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-react-native-web": "^0.0.29",
+    "@storybook/react": "^10.1.11",
+    "@storybook/react-webpack5": "^8.6.14",
     "@types/react": "~19.1.0",
+    "babel-loader": "^10.0.0",
+    "babel-plugin-react-native-web": "^0.21.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "typescript": "~5.9.2"
+    "storybook": "^8.6.14",
+    "typescript": "~5.9.2",
+    "webpack": "^5.104.1"
   },
   "private": true
 }
